finalizando frontend e autenticacao google auth
